# pico-project-generator

./: CMakeLists.txt  main.c  tusb_config.h
.github/workflows/: build.yml
